--- a/css/laxt.css
+++ b/css/laxt.css
@@ -52,6 +52,13 @@ video{
     margin-right: 12%;
     font-weight: bolder;
 }
+.sp2a{
+    position: absolute;
+    top: 111%;
+    left: 50%;
+    border-left:1px solid rgb(255, 255, 255);
+z-index: 2000;
+}
 .ni{
     position: absolute;
     top: 37%;
@@ -182,6 +189,9 @@ video{
     width: 100%;
     height: 27%;
 }
+.carro:hover{
+    filter: grayscale(1);
+}
 
 .duplaa{
     position: relative;
@@ -237,25 +247,32 @@ video{
     width: 100%;
     height: 27%;
 }
+.mulherr:hover{
+    filter: grayscale(1);
+}
 .homem{
     position: relative;
+    width: 100%;
+ 
       
 }
 .bl{
     position: absolute;
     width: 100%;
-    height: 101%;
-    top: -1.5%;
+    height: 103%;
+    top: -2.5%;
     background-color: rgba(0, 0, 0, 0.705);
 }
 .man{
-   background-attachment: local;
+   background-size: cover;
     width: 100%;
+    height: 595px;
     margin-top: -1%;
+    z-index: 1;
 }
 .cab{
     position: absolute;
-    top: 34%;
+    top: 28%;
     left: 44%;
     color: ivory;
     font-size: 11px;
@@ -277,7 +294,7 @@ video{
 }
 .cabe{
     position: absolute;
-    top: 57%;
+    top: 69%;
     left: 49%;
     color: ivory;
     font-size: 11px;
@@ -288,6 +305,7 @@ video{
 footer{
     background-color: rgb(0, 0, 0);
     margin-top: -1%;
+    z-index: 200;
 }
 .con{
     padding-top: 10%;
